Add ErrorBoundary and Loading components with styles; Implement UserProfile with profile, orders, and addresses tabs; Create API service for authentication, profile, orders, and admin management

--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,11 @@
-
 # Database credentials
 DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=
-DB_DATABASE=admin
+DB_DATABASE=food_delivery
 
 # Server port
 PORT=3001
+
+# JWT Secret
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
