Fix URL formatting in App and StoreContext components

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 JWT_SECRET=mySecretKey123
 SALT=10
-MONGO_URL=mongodb+srv://jvgamingvn_db_user:ultfGnkarffs9jc0@food-delivery.rvrixtx.mongodb.net/food-delivery?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://jvgamingvn_db_user:dR9WU3thcOifc1i8@food-delivery.rvrixtx.mongodb.net/food-delivery?retryWrites=true&w=majority
 STRIPE_SECRET_KEY=sk_test_BQokikJOvBiI2HlWgH4olfQ2
