Final touch or something Idk

--- a/backend/services/order-service/.env
+++ b/backend/services/order-service/.env
@@ -1,5 +1,6 @@
 JWT_SECRET=mySecretKey123
 SALT=10
-MONGO_URL=mongodb+srv://jvgamingvn_db_user:dR9WU3thcOifc1i8@food-delivery.rvrixtx.mongodb.net/food-delivery?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://jvgamingvn_db_user:71cM6dIH15JVsGVp@food-delivery.rvrixtx.mongodb.net/
 STRIPE_SECRET_KEY=sk_test_BQokikJOvBiI2HlWgH4olfQ2
-NODE_ENV=production
+FRONTEND_URL=https://uma.gabrys.io.vn
+
