--- a/backend/api-gateway/package.json
+++ b/backend/api-gateway/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
-    "http-proxy-middleware": "^3.0.5"
+    "http-proxy-middleware": "^3.0.5",
+    "swagger-ui-express": "^5.0.1"
   }
 }
